Fix: guardar en carpeta RECIBOS y corregir saltos de línea en párrafo declaratorio